corrects spacing to recaptcha2

--- a/css/main.scss
+++ b/css/main.scss
@@ -173,7 +173,7 @@ footer>.row {
 
 }
 
-#rc-anchor-container {
+.g-recaptcha {
     margin-bottom: 1em;
 }
 
